[package]
name = "zpr-game-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.12.3"
image = "0.24.5"
png = "0.17.7"
rand = "0.8.5"
vulkano = "0.32.0"
vulkano-shaders = { version = "0.32.0", features = ["shaderc-build-from-source"] }
vulkano-win = "0.32.0"
winit = "0.27.5"
crossbeam = "0.8.2"
serde = { version = "1.0.152", features = ["derive"] }
ron = "0.8.0"
thiserror = "1.0.38"
